--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,10 +16,8 @@
 
 .footer-left {
   width: 30%;
-  text-align:left;
-  margin-top: 20px;
-  margin-right: 20px;
-  margin-left: -70px;
+  text-align: left;
+  margin: 20px -70px 0 20px;
 }
 
 .footer-left p {
@@ -29,8 +27,7 @@
 .social-icons {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
-  margin-left: 20px;
+  margin: 10px 20px 0 20px;
 }
 
 .footer-columns {
@@ -73,54 +70,57 @@
 .up-arrow {
   font-size: 24px;
 }
+
+/* Responsive Styles */
+
 @media (max-width: 1200px) {
   .footer-content {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .footer-left {
-      width: 100%;
-      text-align: center;
-      margin: 20px 0;
+    width: 100%;
+    text-align: center;
+    margin: 20px 0;
   }
 
   .footer-columns {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .footer-column {
-      margin: 10px 0;
+    margin: 10px 0;
   }
 }
 
 @media (max-width: 768px) {
   .footer-content {
-      padding: 15px;
+    padding: 15px;
   }
 
   .footer-left {
-      margin-left: 0;
-      margin-right: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .footer-column {
-      width: 100%;
-      text-align: center;
-      margin: 5px 0;
+    width: 100%;
+    text-align: center;
+    margin: 5px 0;
   }
 
   .social-icons {
-      justify-content: center;
+    justify-content: center;
   }
 
   .footer-bottom {
-      padding: 10px;
-      margin-top: 10px;
+    padding: 10px;
+    margin-top: 10px;
   }
 
   .up-arrow {
-      font-size: 20px;
+    font-size: 20px;
   }
 }
