--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -74,62 +74,65 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+/* Responsive Styles */
+
 @media (max-width: 1200px) {
   .top-row {
-      justify-content: center;
-      height: auto;
-      padding: 10px 0;
+    justify-content: center;
+    height: auto;
+    padding: 10px 0;
   }
 
   .bottom-row {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .logo-and-nav {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .nav-links {
-      justify-content: center;
-      margin: 10px 0;
+    justify-content: center;
+    margin: 10px 0;
   }
 }
 
 @media (max-width: 768px) {
   .header {
-      padding: 10px;
+    padding: 10px;
   }
 
   .top-row {
-      padding: 5px 0;
+    padding: 5px 0;
   }
 
   .contact-info {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .contact-item {
-      margin-right: 0;
-      margin-bottom: 10px;
+    margin-right: 0;
+    margin-bottom: 10px;
   }
 
   .bottom-row {
-      padding: 5px 0;
-      margin: 0;
+    padding: 5px 0;
+    margin: 0;
   }
 
   .logo-main {
-      margin-left: 0;
+    margin-left: 0;
   }
 
   .nav-links li {
-      margin: 5px 0;
+    margin: 5px 0;
   }
 
   .talk-expert {
-      width: 100%;
-      text-align: center;
+    width: 100%;
+    text-align: center;
   }
 }
